--- a/www/webapp/templates/index.html
+++ b/www/webapp/templates/index.html
@@ -7,10 +7,7 @@
     <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1 class="mt-5">Hello, Flask with Bootstrap!</h1>
-        <p class="lead">This is a simple example of integrating Bootstrap with a Flask application.</p>
-    </div>
+    {% block body %}{% endblock %}
     <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
 </body>
 </html>
