--- a/www/webapp/templates/index.html
+++ b/www/webapp/templates/index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flask with Bootstrap</title>
-    <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
-</head>
-<body>
-    {% block body %}{% endblock %}
-    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-</body>
-</html>
+{% extends "layout/base.html" %}
+
+{% block title %}
+<title>Flask with Bootstrap</title>
+{% endblock %}
+
+{% block body %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>Flask with Bootstrap</h1>
+            <p>This is an example</p>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
