fix: video player using layou.html

--- a/www/webapp/templates/material/videoPlayer.html
+++ b/www/webapp/templates/material/videoPlayer.html
@@ -1,5 +1,10 @@
 {% extends 'layout/base.html' %}
 
-<div>
-    Video Player
-</div>
+{% block title %}
+    <title>Video Player</title>
+{% endblock %}
+
+{% block body %}
+    <div> Video Player </div>
+{% endblock %}
+
