--- a/www/webapp/templates/login.html
+++ b/www/webapp/templates/login.html
@@ -13,8 +13,8 @@
                   <h3>Login with OAuth</h3>
               </div>
               <div class="card-body text-center">
-                  <a href="{{ url_for('login_google') }}" class="btn btn-danger btn-block">Login with Google</a>
-                  <a href="{{ url_for('login_facebook') }}" class="btn btn-primary btn-block">Login with Facebook</a>
+                  <a href="#google" class="btn btn-danger btn-block">Login with Google</a>
+                  <a href="#facebook" class="btn btn-primary btn-block">Login with Facebook</a>
               </div>
           </div>
       </div>
