feat: start create page finish layout

--- a/www/webapp/templates/index.html
+++ b/www/webapp/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout/base.html" %}
 
 {% block title %}
-<title>Flask with Bootstrap</title>
+<title>TipsyTakedown</title>
 {% endblock %}
 
 {% block body %}
