--- a/www/webapp/templates/layout/base.html
+++ b/www/webapp/templates/layout/base.html
@@ -1,3 +1,5 @@
+{% from "layout/components/navbar.html" import navbar %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,8 +10,10 @@
             href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" 
             rel="stylesheet">
     </head>
-    <body>
+    <body data-bs-theme="light" id="body">
+        {{ navbar() }}
         {% block body %}{% endblock %}
+        <script src="/static/js/base.js"></script>
         <script 
             src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}">
         </script>
