--- a/www/webapp/templates/layout/base.html
+++ b/www/webapp/templates/layout/base.html
@@ -13,6 +13,8 @@
     <body data-bs-theme="light" id="body">
         {{ navbar() }}
         {% block body %}{% endblock %}
+
+        <script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
         <script src="/static/js/base.js"></script>
         <script 
             src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}">
