--- a/www/webapp/templates/components/inputs/input_text.html
+++ b/www/webapp/templates/components/inputs/input_text.html
@@ -5,6 +5,7 @@
     <input type={{type}} 
         class="form-control" 
         id={{id}} 
+        name={{id}}
         placeholder="Enter email">
     {% if description %}
         <small id={{id}} class="form-text text-muted">{{description}}</small>
