--- a/www/webapp/templates/layout/components/navbar.html
+++ b/www/webapp/templates/layout/components/navbar.html
@@ -30,7 +30,7 @@
                 </li>
                 <li>
                     <!-- TODO: only if teacher or higher -->
-                    <a class="nav-link" href="/course/create">Add Course</a>
+                    <a class="nav-link" href="/video/uploader">Upload video</a>
                 </li>
                 <li class="nav-item">
                     <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
