--- a/www/webapp/templates/video/videoPlayer/index.html
+++ b/www/webapp/templates/video/videoPlayer/index.html
@@ -5,6 +5,14 @@
 {% endblock %}
 
 {% block body %}
-    <div> Video Player </div>
+<div class="mx-5">
+    <h1>{{ video.name }}</h1>
+
+    <video width="320" height="240" controls>
+        <source src="{{ video_src }}" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <br>
+</div>
 {% endblock %}
 
