--- a/www/webapp/templates/layout/components/navbar.html
+++ b/www/webapp/templates/layout/components/navbar.html
@@ -2,7 +2,7 @@
 <div class="mx-5">
     <nav class="navbar navbar-expand-lg navbar-light justify-content-between">
         <div> 
-            <a class="navbar-brand" href="#">TipsyTakedown</a>
+            <a class="navbar-brand" href="/">TipsyTakedown</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
