--- a/www/webapp/templates/client_callback.html
+++ b/www/webapp/templates/client_callback.html
@@ -5,6 +5,14 @@
 {% endblock %}
 
 {% block body %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>Client Callback</h1>
+            <p>Redirecting...</p>
+        </div>
+    </div>
+</div>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const token = urlParams.get('token');
@@ -12,8 +20,9 @@
     if (token) {
         sessionStorage.setItem('token', token);
     }
-
-    window.location.href = '/';
+    setTimeout(() => {
+        window.location.href = '/';
+    }, 2000);
 </script>
 {% endblock %}
 
