--- a/www/webapp/templates/layout/components/navbar.html
+++ b/www/webapp/templates/layout/components/navbar.html
@@ -1,10 +1,11 @@
 {% macro navbar() %}
 <div class="mx-5">
     <nav class="navbar navbar-expand-lg navbar-light justify-content-between">
-        <div> 
+        <div>
             <a class="navbar-brand" href="/">TipsyTakedown</a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
         </div>
@@ -16,7 +17,7 @@
                     <a class="nav-link" href="/video/uploader">Upload video</a>
                 </li>
                 <li class="nav-item">
-                    <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+                    <a class="btn btn-success my-2 my-sm-0" href="/auth/google">Login</a>
                 </li>
             </ul>
         </div>
