--- a/www/webapp/templates/layout/components/navbar.html
+++ b/www/webapp/templates/layout/components/navbar.html
@@ -16,8 +16,18 @@
                     <!-- TODO: only if teacher or higher -->
                     <a class="nav-link" href="/video/uploader">Upload video</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Login
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="/login">Sign In</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="/auth/google"">Sign In with Google</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item">
-                    <a class="btn btn-success my-2 my-sm-0" href="/auth/google">Login</a>
+                    <a class="btn btn-primary m-2 my-sm-0" href="/register">Register</a>
                 </li>
             </ul>
         </div>
