improve index page template with a footer

--- a/www/webapp/templates/layout/base.html
+++ b/www/webapp/templates/layout/base.html
@@ -1,4 +1,5 @@
 {% from "layout/components/navbar.html" import navbar %}
+{% from "layout/components/footer.html" import footer %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,8 +13,10 @@
     </head>
     <body data-bs-theme="light" id="body">
         {{ navbar() }}
+
         {% block body %}{% endblock %}
 
+        {{ footer() }}
         <script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
         <script src="/static/js/base.js"></script>
         <script 
