--- a/www/webapp/templates/components/inputs/input_text.html
+++ b/www/webapp/templates/components/inputs/input_text.html
@@ -1,12 +1,12 @@
 {% macro input_text(title, id, description, type="text", placeholder="") %}
-<div class="form-group mt-2">
+<div class="form-group mt-2 row">
     <label for={{id}}>{{title}}</label>
 
     <input type={{type}} 
-        class="form-control" 
+        class="form-control col-4" 
         id={{id}} 
         name={{id}}
-        placeholder="Enter email">
+        placeholder={{title}}>
     {% if description %}
         <small id={{id}} class="form-text text-muted">{{description}}</small>
     {% endif %}
