--- a/www/webapp/templates/login.html
+++ b/www/webapp/templates/login.html
@@ -5,30 +5,84 @@
 {% endblock %}
 
 {% block body %}
-<div class="container">
-    <div class="row">
-        <h2>User Login</h2>
-        <form>
-            <div class="mb-3 col-4">
-                <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email">
-            </div>
-            <div class="mb-3 col-4">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter password">
-            </div>
-            <div class="alert alert-danger d-none" role="alert" id="errorMessage">Invalid email or password</div>
+<style>
+    /* .form-signin {
+        width: 100%;
+        max-width: 330px;
+        padding: 15px;
+        margin: auto;
+    } */
+    html,
+body {
+  height: 100%;
+}
 
-            <button type="submit" class="btn btn-primary">Login</button>
+.form-signin {
+  max-width: 330px;
+  padding: 1rem;
+}
+
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+</style>
+<div class="container">
+    <main class="form-signin w-100 m-auto">
+        <form>
+          <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter email">
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Enter password">
+        </div>
+          <!-- <div class="form-check text-start my-3">
+            <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              Remember me
+            </label>
+          </div> -->
+          <div class="alert alert-danger d-none" role="alert" id="errorMessage">Invalid email or password</div>
+
+          <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
         </form>
-    </div>
-    
+        <hr class="border-top">
+        <div class="text-center">
+            <a class="btn btn-secondary w-100 py-2" href="/auth/google">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-google" viewBox="0 0 16 16">
+                    <path d="M15.545 6.558a9.4 9.4 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.7 7.7 0 0 1 5.352 2.082l-2.284 2.284A4.35 4.35 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.8 4.8 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.7 3.7 0 0 0 1.599-2.431H8v-3.08z"/>
+                  </svg>
+                <span class="mx-2">Sign in with Google</span>
+              </a>
+        </div>
+        <hr class="border-top">
+        <div class="text-center">
+            <a href="/register" class="btn btn-outline-primary w-100 py-2">Create an account</a>
+        </div>
+      </main>
+
     <script>
         async function submitForm() {
             var email = document.getElementById("email").value;
             var password = document.getElementById("password").value;
+            const errorMessage = document.getElementById('errorMessage');
             
-            // Perform validation and other necessary checks here
+            errorMessage.classList.add("d-none");
             
             // Create an object to hold the form data
             var formData = {
@@ -47,7 +101,6 @@
             });
 
             if (!response.ok) {
-                const errorMessage = document.getElementById('errorMessage');
                 errorMessage.classList.remove("d-none");
                 return;
             }
