feat: improve sign in / sign up custom

--- a/www/webapp/templates/layout/components/navbar.html
+++ b/www/webapp/templates/layout/components/navbar.html
@@ -17,10 +17,10 @@
                     <a class="nav-link" href="/video/uploader">Upload video</a>
                 </li>
                 <li>
-                    <a class="nav-link btn-primary" href="/login">Sign Up</a>
+                    <a class="btn btn-primary mx-2" id="sign-up" href="/signup">Sign Up</a>
                 </li>
                 <li>
-                    <a class="nav-link btn-secondary" href="/signout">Sign Out</a>
+                    <a class="btn btn-secondary d-none" id="sign-out" href="/signout">Sign Out</a>
                 </li>
             </ul>
         </div>
