updating from comments of the pr

--- a/www/webapp/templates/components/inputs/input_text.html
+++ b/www/webapp/templates/components/inputs/input_text.html
@@ -1,9 +1,9 @@
 {% macro input_text(title, id, description, type="text", placeholder="") %}
-<div class="form-group mt-2 row">
+<div class="form-group mt-2">
     <label for={{id}}>{{title}}</label>
 
     <input type={{type}} 
-        class="form-control col-4" 
+        class="form-control" 
         id={{id}} 
         name={{id}}
         placeholder={{title}}>
