feat: improve the ux of the login

--- a/www/webapp/templates/layout/components/navbar.html
+++ b/www/webapp/templates/layout/components/navbar.html
@@ -13,10 +13,21 @@
         <div class="" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li>
-                    <a class="btn btn-primary mx-2" id="sign-up" href="/signup_signin">Sign in/ Sign up</a>
+                    <a class="btn btn-primary mx-2" id="sign-up" href="/signup_signin">Sign in / Sign up</a>
                 </li>
-                <li>
-                    <a class="btn btn-secondary d-none" id="sign-out" href="/signout">Sign Out</a>
+                <li class="nav-item dropdown d-none" id="sign-out">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                        </svg>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="/signout">Sign Out</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
