--- a/www/webapp/templates/auth/login.html
+++ b/www/webapp/templates/auth/login.html
@@ -47,7 +47,7 @@
       <div class="alert alert-danger d-none" role="alert" id="errorMessage">
         Invalid email or password
       </div>
-      <button class="btn btn-primary w-100 py-2" id="btn-submit">Next</button>
+      <button class="btn btn-primary w-100 py-2" id="btn-submit" action="0">Next</button>
     </form>
     <hr class="border-top" />
     <div class="text-center">
@@ -66,6 +66,6 @@
       </a>
     </div>
   </main>
-  <script src="/static/js/login_flow.js"></script>
+  <script src="/static/js/auth/login.js"></script>
 </div>
 {% endblock %}
