--- a/www/webapp/templates/admin/index.html
+++ b/www/webapp/templates/admin/index.html
@@ -23,4 +23,8 @@
         {% endif %}
     </div>
 </div>
+<script src="/static/js/utils/authorizer.js"></script>
+<script>
+    authorizer([UserTypes.ADMIN, UserTypes.TEACHER]);
+</script>
 {% endblock %}
