--- a/www/webapp/templates/layout/base.html
+++ b/www/webapp/templates/layout/base.html
@@ -11,6 +11,7 @@
             href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" 
             rel="stylesheet">
         <link href="/static/css/layout/base.css" rel="stylesheet">
+        <script src="/static/js/utils/getUser.js"></script>
     </head>
     <body data-bs-theme="light" id="body" >
         {{ navbar() }}
@@ -19,9 +20,9 @@
 
         {{ footer() }}
         <script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
-        <script src="/static/js/base.js"></script>
         <script 
             src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}">
         </script>
+        <script src="/static/js/base.js"></script>
     </body>
 </html>
