--- a/www/webapp/templates/admin/index.html
+++ b/www/webapp/templates/admin/index.html
@@ -14,17 +14,19 @@
     </div>
     
     <div class="h-full">
-        {% if not courses %}
-        <div class="d-flex justify-content-center align-items-center h-full">
+        <div id="coursesPlaceholder" 
+            class="d-flex justify-content-center align-items-center h-full">
             <h3>No courses, Please create one</h3>
         </div>
-        {% else %}
-        list of courses
-        {% endif %}
+
+        <div id="courses"></div>
     </div>
 </div>
 <script src="/static/js/utils/authorizer.js"></script>
+<script src="/static/js/admin/index.js"></script>
 <script>
     authorizer([UserTypes.ADMIN, UserTypes.TEACHER]);
+
+    updateCourseTable();
 </script>
 {% endblock %}
