--- a/www/webapp/templates/admin/index.html
+++ b/www/webapp/templates/admin/index.html
@@ -9,7 +9,9 @@
     <div class="d-flex justify-content-between">
         <h1>Courses List</h1>
         <div class="d-flex align-items-center">
-            <a class="btn btn-primary" href="/admin/course/new">New Course</a>
+            <a class="btn btn-primary" href="course/new"> 
+                New Course
+            </a>
         </div>
     </div>
     
@@ -23,6 +25,7 @@
         </div>
     </div>
 </div>
+
 <script src="/static/js/utils/authorizer.js"></script>
 <script src="/static/js/admin/index.js"></script>
 <script>
