--- a/www/webapp/templates/components/inputs/input_text.html
+++ b/www/webapp/templates/components/inputs/input_text.html
@@ -6,9 +6,28 @@
         class="form-control" 
         id={{id}} 
         name={{id}}
-        placeholder={{title}}>
+        placeholder={{placeholder if placeholder != '' else title}}>
     {% if description %}
         <small id={{id}} class="form-text text-muted">{{description}}</small>
     {% endif %}
 </div>
 {%- endmacro %}
+
+{% macro input(id, placeholder, type="text", title="", description="") %}
+<div class="form-group mb-2">
+    {%- if title %}
+        <label for={{id}}>{{title}}</label>
+    {%- endif %}
+
+    <input type={{type}} 
+        required
+        class="form-control" 
+        id={{id}} 
+        name={{id}}
+        placeholder="{{placeholder}}">
+    {% if description %}
+        <small id={{id}} class="form-text text-muted">{{description}}</small>
+    {% endif %}
+</div>
+{%- endmacro %}
+```
