--- a/www/webapp/templates/layout/base.html
+++ b/www/webapp/templates/layout/base.html
@@ -13,13 +13,12 @@
         <link href="/static/css/layout/base.css" rel="stylesheet">
         <script src="/static/js/utils/getUser.js"></script>
     </head>
-    <body data-bs-theme="light" id="body" >
+    <body data-bs-theme="dark" id="body" >
         {{ navbar() }}
 
         {% block body %}{% endblock %}
 
         {{ footer() }}
-        <script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
         <script 
             src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}">
         </script>
