--- a/www/webapp/templates/auth/google/callback.html
+++ b/www/webapp/templates/auth/google/callback.html
@@ -1,15 +1,15 @@
 {% extends "layout/base.html" %}
 
 {% block title %}
-<title>TipsyTakedown - Client Callback</title>
+<title>TipsyTakedown - {{ translations['auth']['callback_title'] }}</title>
 {% endblock %}
 
 {% block body %}
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1>Client Callback</h1>
-            <p>Redirecting...</p>
+            <h1>{{ translations['auth']['callback_title'] }}</h1>
+            <p>{{ translations['auth']['callback_message'] }}</p>
         </div>
     </div>
 </div>
