--- a/www/webapp/templates/layout/components/navbar.html
+++ b/www/webapp/templates/layout/components/navbar.html
@@ -1,4 +1,4 @@
-{% macro navbar() %}
+{% macro navbar(translations) %}
 <div class="mx-5">
     <nav class="navbar navbar-expand-lg navbar-light justify-content-between">
         <div>
@@ -13,7 +13,11 @@
         <div class="" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li>
-                    <a class="btn btn-primary mx-2" id="sign-up" href="/auth/login">Sign in / Sign up</a>
+                    <a class="btn btn-primary mx-2" id="sign-up" href="/auth/login">{{ translations['home']['sign_up']}}</a>
+                </li>
+                <li>
+                    <a href="/change_language/en">English</a>
+                    <a href="/change_language/es">Español</a>
                 </li>
                 <li class="nav-item dropdown d-none" id="sign-out">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -26,12 +30,12 @@
                         </svg>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><a class="dropdown-item" href="#">{{ translations['home']['profile'] }}</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li>
-                            <a id="btn-signout" class="dropdown-item">Sign Out</a>
+                            <a id="btn-signout" class="dropdown-item">{{ translations['home']['sign_out'] }}</a>
                         </li>
                     </ul>
                 </li>
