resolving comments from Alfonso

--- a/www/webapp/templates/layout/components/navbar.html
+++ b/www/webapp/templates/layout/components/navbar.html
@@ -13,7 +13,7 @@
         <div class="" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li>
-                    <a class="btn btn-primary mx-2" id="sign-up" href="/auth/login">{{ translations['home']['sign_up']}}</a>
+                    <a class="btn btn-primary mx-2" id="sign-up" href="/auth/login">{{ translations['navbar']['sign_up']}}</a>
                 </li>
                 <li>
                     <a href="/change_language/en">English</a>
@@ -30,12 +30,12 @@
                         </svg>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">{{ translations['home']['profile'] }}</a></li>
+                        <li><a class="dropdown-item" href="#">{{ translations['navbar']['profile'] }}</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li>
-                            <a id="btn-signout" class="dropdown-item">{{ translations['home']['sign_out'] }}</a>
+                            <a id="btn-signout" class="dropdown-item">{{ translations['navbar']['sign_out'] }}</a>
                         </li>
                     </ul>
                 </li>
