fix dark mode on

--- a/www/webapp/templates/layout/base.html
+++ b/www/webapp/templates/layout/base.html
@@ -13,7 +13,7 @@
         <link href="/static/css/layout/base.css" rel="stylesheet">
         <script src="/static/js/utils/getUser.js"></script>
     </head>
-    <body data-bs-theme="light" id="body" >
+    <body data-bs-theme="dark" id="body" >
         {{ navbar(translations) }}
 
         {% block body %}{% endblock %}
