--- a/www/webapp/templates/auth/login.html
+++ b/www/webapp/templates/auth/login.html
@@ -1,7 +1,10 @@
+{% from "layout/components/pricing.html" import pricing %}
 {% extends "layout/base.html" %} {% block title %}
+
 <title>TipsyTakedown - Sign</title>
 {% endblock %} {% block body %}
 <link rel="stylesheet" href="/static/css/signup_form.css">
+{{ pricing() }}
 <div class="container">
   <main class="form-signin w-100 m-auto">
     <form>
