creating dynamic component for prices, getting from db

--- a/www/webapp/templates/auth/login.html
+++ b/www/webapp/templates/auth/login.html
@@ -4,7 +4,7 @@
 <title>TipsyTakedown - Sign</title>
 {% endblock %} {% block body %}
 <link rel="stylesheet" href="/static/css/signup_form.css">
-{{ pricing() }}
+{{ pricing(subscription_types) }}
 <div class="container">
   <main class="form-signin w-100 m-auto">
     <form>
