--- a/www/webapp/templates/layout/components/pricing.html
+++ b/www/webapp/templates/layout/components/pricing.html
@@ -1,64 +1,24 @@
-{% macro pricing() %}
-<main class="mx-5 my-3">
-  <!-- <h1 class="m-5">Pricing</h2> -->
+{% macro pricing(subscription_types) %}
+<main class="mx-auto my-3 d-flex justify-content-center">
   <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-    <div class="col">
-      <div class="card mb-4 rounded-3 shadow-sm">
-        <div class="card-header py-3">
-          <h4 class="my-0 fw-normal">Promo - 2 years</h4>
+    {% for subscription_type in subscription_types %}
+    <div class="flex-column card mb-4 rounded-3 shadow-sm">
+      <div class="d-flex align-content-centered flex-wrap">
+        <div class="card-header flex-fill mb-2">
+          <h4 class="my-0 ">{{ subscription_type.name }}</h4>
         </div>
         <div class="card-body">
-          <h1 class="card-title pricing-card-title">$350
-            <!-- <small class="text-body-secondary fw-light">/mo</small> -->
+            <h1 class="card-title pricing-card-title py-3">
+              ${{ "{:.2f}".format(subscription_type.price) }} 
+              {{ subscription_type.currency }}
           </h1>
-          <ul class="list-unstyled mt-3 mb-4">
-            <li>10 users included</li>
-            <li>2 GB of storage</li>
-            <li>Email support</li>
-            <li>Help center access</li>
-          </ul>
-          <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+          
+          <button type="button" class="w-100 btn btn-lg btn-primary">Subscribe NOW!</button>
         </div>
       </div>
     </div>
-    <div class="col">
-      <div class="card mb-4 rounded-3 shadow-sm">
-        <div class="card-header py-3">
-          <h4 class="my-0 fw-normal">Monthly</h4>
-        </div>
-        <div class="card-body">
-          <h1 class="card-title pricing-card-title">$20
-            <!-- <small class="text-body-secondary fw-light">/mo</small> -->
-          </h1>
-          <ul class="list-unstyled mt-3 mb-4">
-            <li>20 users included</li>
-            <li>10 GB of storage</li>
-            <li>Priority email support</li>
-            <li>Help center access</li>
-          </ul>
-          <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card mb-4 rounded-3 shadow-sm border-primary">
-        <div class="card-header py-3 text-bg-primary border-primary">
-          <h4 class="my-0 fw-normal">Yearly</h4>
-        </div>
-        <div class="card-body">
-          <h1 class="card-title pricing-card-title">$200
-            <!-- <small class="text-body-secondary fw-light">/mo</small> -->
-          </h1>
-          <ul class="list-unstyled mt-3 mb-4">
-            <li>30 users included</li>
-            <li>15 GB of storage</li>
-            <li>Phone and email support</li>
-            <li>Help center access</li>
-          </ul>
-          <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
-        </div>
-      </div>
-    </div>
+    {% endfor %}
   </div>
 </main>
+
 {%- endmacro %}
