--- a/www/webapp/templates/admin/course/components/generalInfo.html
+++ b/www/webapp/templates/admin/course/components/generalInfo.html
@@ -1,39 +1,93 @@
 {% from "components/inputs/input_text.html" import input, input_text %}
-{% macro general_info(step_number) %}
-<form class="d-flex flex-column justify-content-center">
+{% macro general_info(step_number, global_step) %}
+<form class="d-flex flex-column" style="flex: 1 1 auto; height: 40rem; overflow-y: auto;">
     <div class="mb-4">
         <h3>Step {{step_number}}: Course General Info</h3>
     </div>
 
+
     {{ input('title', 'Course Title') }}
-    <div class="thumbnail mb-2">
+
+    <div id="thumbnailButton" class="thumbnail mb-2">
         <div class="thumbnail-container">
-            <img id="loadedThumbnail" 
-            class="d-none" 
-            src="" alt="Course Image">
-            <svg 
-                id="thumbnailPlaceholder"
-                class="bd-placeholder-img card-img-top" 
-                width="100%" 
-                height="180" 
-                xmlns="http://www.w3.org/2000/svg" 
-                role="img" 
-                aria-label="Placeholder: Image cap" 
-                preserveAspectRatio="xMidYMid slice" 
-                focusable="false">
+            <img id="loadedThumbnail" class="d-none" src="" alt="Course Image">
+            <svg id="thumbnailPlaceholder" class="bd-placeholder-img card-img-top" width="100%" height="180"
+                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
+                preserveAspectRatio="xMidYMid slice" focusable="false">
                 <title>Placeholder</title>
                 <rect width="100%" height="100%" fill="#868e96"></rect>
                 <text x="50%" y="50%" fill="#dee2e6" dy=".3em">
-                Image cap
+                    Image cap
                 </text>
             </svg>
         </div>
 
-        <div class="d-none">
-            {{ input_text('Video', 'video', None, 'file') }}
-        </div>
+        <img id="loadedThumbnail" src="" alt="Course Image" class="d-none">
     </div>
+
     {{ input('description', 'Enter short description') }}
     {{ input('long_description', 'Enter long description') }}
+
+
+    <div class="d-none">
+        {{ input('id', 'Course Title') }}
+        {{ input_text('Thumbnail', 'thumbnail', None, 'file') }}
+    </div>
 </form>
+<script>
+    class ThumnailController {
+        constructor() {
+            this.thumbnailButton = document.querySelector("#thumbnailButton");
+            this.thumbnailInput = document.querySelector("#thumbnail");
+            this.thumbnailPlaceholder = document.querySelector("#thumbnailPlaceholder");
+            this.loadedThumbnail = document.querySelector("#loadedThumbnail");
+
+            this.thumbnailButton.addEventListener("click", this.onClickThumbnailButton.bind(this));
+            this.thumbnailInput.addEventListener("change", this.handleThumbnailChange.bind(this));
+        }
+
+        onClickThumbnailButton() {
+            this.thumbnailInput.click();
+        }
+
+        handleThumbnailChange() {
+            const file = this.thumbnailInput.files[0];
+            const reader = new FileReader();
+
+            reader.onload = (e) => {
+                this.thumbnailPlaceholder.classList.add("d-none");
+
+                this.loadedThumbnail.classList.remove("d-none");
+                this.loadedThumbnail.src = e.target.result;
+            };
+
+            reader.readAsDataURL(file);
+        }
+    }
+
+    async function beforeNextStep(nextStepButton) {
+        nextStepButton.innerHTML = "Saving Course...";
+
+        await new Promise(resolve => setTimeout(resolve, 2000));
+
+        nextStepButton.innerHTML = "Next Step";
+
+        return 'Errror here'
+    }
+
+    new ThumnailController();
+
+    const stepsElement = document.querySelector("#{{ global_step }}");
+
+    stepsElement.addEventListener("stepsControllerLoaded", (e) => {
+        const stepsController = globalThis.stepsController;
+        const nextStepButton = document.querySelector("#nextStep");
+
+        stepsController.runBeforeNextStep(async (e) => {
+            return await beforeNextStep(nextStepButton);
+        });
+
+        stepsController.initialize();
+    });
+</script>
 {% endmacro %}
