--- a/www/webapp/templates/admin/course/create.html
+++ b/www/webapp/templates/admin/course/create.html
@@ -3,6 +3,10 @@
 {% from "admin/course/components/createLesson/createLesson.html" import create_lesson %}
 {% from "admin/course/components/generalInfo.html" import general_info %}
 {% from "components/stepsController/stepsController.html" import steps_controller %}
+{% set initialStep = 0 %}
+{% set steps = "generalInfo, createMaterial, createLesson" %}
+{% set isLazy = True %}
+{% set globalSteps = "globalStepsController" %}
 {% extends "layout/base.html" %}
 
 {% block title %}
@@ -11,6 +15,7 @@
 {% endblock %}
 
 {% block body %}
+<input id="{{globalSteps}}" class="d-none"/>
 <div class="d-flex flex-column mx-5 mt-2 content">
     <div class="d-flex justify-content-between">
         <h1>Add Course</h1>
@@ -27,21 +32,24 @@
     </div>
     
     <div id="steps" class="mt-4">
+        <div id="generalInfo" class="d-none">
+            <!-- I'm initializing steps controller here -->
+            {{ general_info(1, globalSteps) }}
+        </div>
         <div id="createMaterial" class="d-none">
-            {{ create_material(1) }}
+            {{ create_material(2) }}
         </div>
         <div id="createLesson" class="d-none h-full">
-            {{ create_lesson(2) }}
-        </div>
-        <div id="generalInfo" class="d-none">
-            {{ general_info(3) }}
+            {{ create_lesson(3) }}
         </div>
     </div>
 
     <div id="stepsController" class="d-flex h-full align-items-end w-full">
-        {{ steps_controller(0, "createMaterial, createLesson, generalInfo") }}
+        <!-- Lazy initialization of steps controller, -->
+        {{ steps_controller(initialStep, steps, isLazy, globalSteps) }}
     </div>
 </div>
+
 <script src="/static/js/utils/authorizer.js"></script>
 <script>
     authorizer([UserTypes.ADMIN, UserTypes.TEACHER]);
