--- a/www/webapp/templates/components/priceTable/priceTable.html
+++ b/www/webapp/templates/components/priceTable/priceTable.html
@@ -1,4 +1,4 @@
-{% macro pricing(subscription_types) %}
+{% macro priceTable(subscription_types) %}
 <main class="mx-auto my-3 d-flex justify-content-center">
   <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
     {% for subscription_type in subscription_types %}
